--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility to analyze and manipualte the text in the way you want"
+      content="TextUtils is a Word and Character utility use to analyze and manipualte the text in the way you want, like converting Lowercase to Uppercase,Uppercase to Lowercase, copying the modified text, remove extra spaces"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>TextUtils</title>
+    <title>TextUtils | Lowercase to Uppercase | Uppercase to Lowercase | Remove Extra Spaces</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
